Frontend: use named inputs

--- a/frontend/src/app/ui-kit/text-field/text-field.component.html
+++ b/frontend/src/app/ui-kit/text-field/text-field.component.html
@@ -18,6 +18,7 @@
 
     <input [attr.type]="!isPasswordField ? 'text' : 'password'"
            [attr.placeholder]="placeholder"
+           [attr.name]="fieldName || label"
            [(ngModel)]="value"
            (ngModelChange)="ngModelChangeHandler($event, value)"
            #val>
