Frontend: Logout should clear session and cookies

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
   </div>
   <div class="app-account except-xs">
     {{ (accountInfo$ | async).name }}
-    <app-icon class="signout-icon" [icon]="'Sign Out'" [routerLink]="['/account', 'signin']"></app-icon>
+    <app-icon class="signout-icon" [icon]="'Sign Out'" (click)="signOutHandler()"></app-icon>
   </div>
 
   <div class="app-hamburger" [ngClass]="{ 'app-hamburger--opened': isMenuOpened }">
