--- a/frontend/src/styles/ag-grid-custom-theme.css
+++ b/frontend/src/styles/ag-grid-custom-theme.css
@@ -16,7 +16,7 @@
   -webkit-font-smoothing: antialiased;
   color: #6A6A6A;
   font-family: 'Ubuntu', sans-serif;
-  font-size: 16px;
+  font-size: var(--px16);
   line-height: normal;
 }
 
@@ -38,7 +38,7 @@
 }
 
 .ag-theme-alpine .ag-row {
-  font-size: 16px;
+  font-size: var(--px16);
   color: #6A6A6A;
   font-style: normal;
   font-weight: normal;
