--- a/frontend/src/app/view/comparer/comparer.component.css
+++ b/frontend/src/app/view/comparer/comparer.component.css
@@ -3,6 +3,15 @@
 }
 
 .data-placeholder {
+  margin-left: -1.5rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  margin-right: -1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+/*
+.data-placeholder {
   height: 100%;
   width: 100%;
   box-shadow: inset 0 0 11px 0 #00000021;
@@ -12,11 +21,42 @@
   border: 3px solid #e5e5e5;
   border-top: 36px solid #e5e5e5;
 }
+*/
 .compare-images-container {}
 .compare-image {
   opacity: 0;
   position: absolute;
 }
 .compare-image--active {
+  opacity: 1;
+}
+
+
+.comparer-container {
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.image-frame {
+  border: 1px solid #f6f6f6;
+  border-top: 24px solid #f6f6f6;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  box-shadow: 0px 4px 20px 0 rgba(0, 0, 30, 0.2), 0px 2px 5px 0 rgba(0, 0, 30, 0.2);
+  position: relative;
+}
+
+.image {
+  margin: 0;
+  padding: 0;
+  object-fit: contain;
+  width: 100%;
+  opacity: 0;
+  position: absolute;
+}
+.image--active {
   opacity: 1;
 }
