--- a/frontend/src/app/view/comparer/comparer.component.css
+++ b/frontend/src/app/view/comparer/comparer.component.css
@@ -10,31 +10,13 @@
   padding-bottom: 1.5rem;
 }
 
-/*
-.data-placeholder {
-  height: 100%;
-  width: 100%;
-  box-shadow: inset 0 0 11px 0 #00000021;
-  padding: 1em;
-  margin-top: 1em;
-  border-radius: 6px;
-  border: 3px solid #e5e5e5;
-  border-top: 36px solid #e5e5e5;
-}
-*/
-.compare-images-container {}
-.compare-image {
-  opacity: 0;
-  position: absolute;
-}
-.compare-image--active {
-  opacity: 1;
-}
-
-
 .comparer-container {
   margin-right: auto;
   margin-left: auto;
+}
+
+.panel-shadow {
+  box-shadow: 0px 4px 20px 0 rgba(0, 0, 30, 0.2), 0px 2px 5px 0 rgba(0, 0, 30, 0.2);
 }
 
 .image-frame {
@@ -45,7 +27,6 @@
   padding: 0;
   height: 100%;
   width: 100%;
-  box-shadow: 0px 4px 20px 0 rgba(0, 0, 30, 0.2), 0px 2px 5px 0 rgba(0, 0, 30, 0.2);
   position: relative;
 }
 
