Frontend: Comparer view: Switch to other tested viewports

--- a/frontend/src/app/ui-kit/info-table/info-table.component.html
+++ b/frontend/src/app/ui-kit/info-table/info-table.component.html
@@ -6,7 +6,12 @@
 
     <td class="value-cell" *ngIf="!row.chips">{{ items[ row.prop ] }}</td>
     <td class="value-cell" *ngIf="row.chips && items[ row.prop ].length > 0">
-        <div class="chips" *ngFor="let v of items[ row.prop ]">{{ v }}</div>
+        <div class="chips"
+             [ngClass]="{ 'chips--clickable': row.clickable }"
+             *ngFor="let v of items[ row.prop ]"
+             (click)="clickOnChip.emit({ label: row.label, prop:row.prop, value: v })">
+          {{ v }}
+        </div>
     </td>
   </tr>
 
