--- a/frontend/src/app/view/scenarios/scenarios.component.html
+++ b/frontend/src/app/view/scenarios/scenarios.component.html
@@ -35,6 +35,7 @@
         (clicked)="refresh()">
       </app-data-action-button>
 
+      <!-- no need any more because of resized previews
       <app-data-action-button
         class="except-xs"
         [label]="'Fit mode'"
@@ -42,6 +43,7 @@
         [hideLabelOnXS]="true"
         (clicked)="fullHeightMode()">
       </app-data-action-button>
+      -->
 
       <!-- TODO: Enable later
       <app-data-action-button
@@ -75,7 +77,7 @@
           [header]="scenario.label"
           [state]="scenario.state"
           [isFavorite]="scenario.meta_isFavorite"
-          [imageUrl]="scenario.meta_referenceImageUrl || '/assets/images/stubs/screen11.png'"
+          [imageUrl]="scenario.meta_referenceMD"
           [fullHeightModeOn]="fullHeightModeOn$ | async"
           (clickRun)="runScenarioHandler($event, scenario.label)"
           (clickFavorite)="favoriteScenarioHandler($event)"
