--- a/frontend/src/app/view/job-page/job-page.component.html
+++ b/frontend/src/app/view/job-page/job-page.component.html
@@ -24,15 +24,18 @@
   </div>
 
   <div class="page-title-placeholder">
-    <div class="title-stats" [ngClass]="{
+    <div class="title-stats" *ngIf="!(isRunning$ | async)" [ngClass]="{
       'title-stats--failed': (sidebarHeaderInfo$ | async).status === 'Failed',
       'title-stats--passed': (sidebarHeaderInfo$ | async).status === 'Passed'
     }">
       {{ resultStats$ |async }} {{ (sidebarHeaderInfo$ | async).status }}
     </div>
+    <div class="title-stats title-stats--running button--in-progress" *ngIf="isRunning$ | async">
+      Running
+    </div>
   </div>
 
-  <div class="page-actions-placeholder">
+  <div class="page-actions-placeholder" *ngIf="!(isRunning$ | async)">
 
     <ul class="page-actions">
 
@@ -117,10 +120,15 @@
     </app-data-action-button>
 
   </div>
-
+ 
   <div class="data-placeholder">
 
-    <div class="row">
+    <div class="view-state view-state--job-running" *ngIf="isRunning$ | async">
+      <img src="/assets/images/view-states/job-running.svg" alt="Job is running">
+      <h3>Job is running...</h3>
+    </div>
+
+    <div class="row" *ngIf="!(isRunning$ | async)">
       <div class="col-sm-12 col-md-6 col-lg-4" *ngFor="let c of cases$ | async; index as idx">
         <app-card-lg
           *ngIf="(imageMode$ | async) === 'Test Result'"
