--- a/frontend/src/app/view/comparer/comparer.component.html
+++ b/frontend/src/app/view/comparer/comparer.component.html
@@ -7,7 +7,7 @@
 
   <div class="breadcrumb-placeholder">
     <span class="breadcrumb-item breadcrumb-item--link" [routerLink]="['/jobs']">Jobs History</span>
-    <span class="breadcrumb-item breadcrumb-item--link" [routerLink]="['/job', jobId]">{{ (breadcrumbsInfo$ | async).job }}</span>
+    <span class="breadcrumb-item breadcrumb-item--link" [routerLink]="['/job', jobId]">Job Report #{{ (breadcrumbsInfo$ | async).reportId }}</span>
     <span class="breadcrumb-item breadcrumb-item--link" [routerLink]="['/scenario', (breadcrumbsInfo$ | async).scenarioId]">{{ (breadcrumbsInfo$ | async).scenario }}</span>
     <span class="breadcrumb-item">{{ (breadcrumbsInfo$ | async).viewport }}</span>
   </div>
