Frontend: fix production build's warning. Build Prod by default.

--- a/frontend/src/app/ui-kit/widget-run/widget-run.component.html
+++ b/frontend/src/app/ui-kit/widget-run/widget-run.component.html
@@ -8,7 +8,7 @@
       [label]="'Scenarios filter'"
       [placeholder]="'Enter scenario name here'"
       [(value)]="scenariosFilter"
-      (valueChange)="scenariosFilterChanged($event)"
+      (valueChange)="scenariosFilterChanged()"
     >
     </app-text-field>
 
