--- a/frontend/src/app/ui-kit/text-field/text-field.component.html
+++ b/frontend/src/app/ui-kit/text-field/text-field.component.html
@@ -20,7 +20,7 @@
            [attr.placeholder]="placeholder"
            [attr.name]="fieldName || label"
            [(ngModel)]="value"
-           (ngModelChange)="ngModelChangeHandler($event, value)"
+           (ngModelChange)="ngModelChangeHandler($event)"
            #val>
 
     <app-icon
