--- a/frontend/src/app/view/job-page/job-page.component.html
+++ b/frontend/src/app/view/job-page/job-page.component.html
@@ -7,7 +7,7 @@
 
   <div class="breadcrumb-placeholder">
     <span class="breadcrumb-item breadcrumb-item--link" [routerLink]="['/jobs']">Jobs History</span>
-    <span class="breadcrumb-item">Job Report #{{ breadcrumbTitle$ | async }}</span>
+    <span class="breadcrumb-item"><span class="except-xs">Job Report </span>#{{ breadcrumbTitle$ | async }}</span>
   </div>
 
   <div class="description-placeholder">
@@ -55,7 +55,7 @@
 
   </div>
 
-  <div class="data-actions-placeholder">
+  <div class="data-actions-placeholder" *ngIf="!(isRunning$ | async)">
     <div>
       <app-data-search-button
         [label]="'Search case'"
@@ -111,7 +111,7 @@
     </div>
   </div>
 
-  <div class="xs-filters-placeholder">
+  <div class="xs-filters-placeholder" *ngIf="!(isRunning$ | async)">
 
     <app-data-action-button
       [label]="'Add Filters'"
@@ -120,12 +120,23 @@
     </app-data-action-button>
 
   </div>
- 
+
   <div class="data-placeholder">
 
     <div class="view-state view-state--job-running" *ngIf="isRunning$ | async">
       <img src="/assets/images/view-states/job-running.svg" alt="Job is running">
-      <h3>Job is running...</h3>
+      <h3>Job is running</h3>
+      <p>Started {{ (jobDescriptionInfo$ | async).runningTime }}</p>
+      <p>
+        <button class="button button--white" (click)="refreshPageHandler()">Refresh</button>
+        <button class="button"
+                [ngClass]="{
+                  'button--white': !breakRunningJob_InProgress,
+                  'button--accent1 button--in-progress': breakRunningJob_InProgress
+                 }"
+                (click)="breakRunningJobHandler()">Break execution</button>
+      </p>
+
     </div>
 
     <div class="row" *ngIf="!(isRunning$ | async)">
